syntax = "proto3";

option java_package = "com.message.proto";

service QueryProcessor{
	rpc sendQuery(QueryRequest) returns (QueryReply);
}


message QueryRequest{
	string file = 1;
}

message QueryReply{
	string message = 1;
}

message Empty{
}